--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <!--Trouver votre hébergement-->
 <div class="trouverhebergement">
     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-    <p>En plein centre de ville ou en plaine nature</p>
+    <p>En plein centre ville ou en pleine nature</p>
       
     <form class="formulaire" method="GET">
         <i id="map" class="fas fa-map-marker-alt fa 1x"></i> 
@@ -49,6 +49,7 @@
                     <a href="#" class="h-text">Familial</a>
                 </div>
             </div>
+            <div class="romanimaux">
             <div class="filter" id="romantique">
                 <div class="h-icone"><i class="fas fa-heart fa-1x"></i></div>
                 <a href="#" class="h-text">Romantique</a>
@@ -56,7 +57,8 @@
             <div class="filter" id="animaux">
                 <div class="h-icone"><i class="fas fa-dog fa-1x"></i></div>
                 <a href="#" class="h-text">Animaux autorisés</a>
-            </div>  
+            </div>
+            </div>
     </div>
 
   <!--Information-->
@@ -66,13 +68,13 @@
 </div> 
 
 <!--Les plus populaires-->
-<section class="hebetpop">
-    <div class="pluspop">
-        <div class="pop">
-            <h2>Les plus populaires</h2>
-            <div id="iconechart"><i class="fas fa-chart-line fa-2x font-weight:900"></i></div>
-        </div>
-    <div class="blocpopresponsive">
+<aside class="hebetpop">
+<div class="pluspop">
+    <div class="pop">
+        <h2>Les plus populaires</h2>
+        <div id="iconechart"><i class="fas fa-chart-line fa-2x font-weight:900"></i></div>
+    </div>
+  <div class="blocPopResponsive">
         <a href="#" class="blocpop">
         <img class="imgpop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo de chambre">
         <div class="bloctext">
@@ -121,18 +123,18 @@
             </div>
         </div> 
     </a>
-</div>
+  </div>
 </div>
 
 <!--Hébergement à Marseille-->
 <div class="hebergement" id="ancrehebergement"> 
-<h2>Hébergement à Marseille</h2>
+<h2>Hébergements à Marseille</h2>
     <div class="blocheb1">
         <div class="blocheb">
             <img class="imgheber" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo d'auberge">
             <div class="bloctextheb" >
                 <h3 class="hebtext">Auberge la Cannebière</h3>
-                <p class="prixheb">Nuit à partir de 25<span class="euro">€</span></p>
+                <p class="prixheb">Nuit à partir de <span class="euro">25€</span></p>
                 <div class="etoiles">
                     <ul class="ulheb">
                         <li><i class="fas fa-star fa-xs" style=color:#0065fc></i></li>
@@ -173,7 +175,7 @@
                         <li><i class="fas fa-star fa-xs" style=color:#0065fc></i></li>
                         <li><i class="fas fa-star fa-xs" style=color:#0065fc></i></li>
                         <li><i class="fas fa-star fa-xs" style=color:#0065fc></i></li>
-                        <li><i class="fas fa-star fa-xs" style=color:#0065fc></i></li>
+                        <li><i class="fas fa-star fa-xs" style=color:#f2f2f2></i></li>
                     </ul>
                 </div>
             </div>   
@@ -200,8 +202,8 @@
     <div class="blocheb">
         <img class="imgheber" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo de chambre d'hôtel">
         <div class="bloctextheb" >
-            <h3 class="hebtext">Auberge Le Panier<h3p>
-            <p class="prixheb">Nuit à partir de 23<span class="euro">€</span></p>
+            <h3 class="hebtext">Auberge Le Panier</h3>
+            <p class="prixheb">Nuit à partir de <span class="euro">23€</span></p>
             <div class="etoiles">
                 <ul class="ulheb">
                     <li><i class="fas fa-star fa-xs" style=color:#0065fc></i></li>
@@ -211,8 +213,8 @@
                     <li><i class="fas fa-star fa-xs" style=color:#f2f2f2></i></li>
                 </ul>
             </div>
-        </div>   
-    </div>
+        </div>
+   </div>
 
     <div class="blocheb">
         <img class="imgheber" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo de chambre d'hôtel">
@@ -234,7 +236,7 @@
 
 <h2 class="txttitre2">Afficher plus</h2>
 </div>
-</section>
+</aside>
 
 <!--Activités-->
 <section class="activitephoto" id="ancreactivite">
@@ -268,7 +270,7 @@
             </div>
             <div class="activite">
                 <img class="imgactiv imgactivite56" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo de parc">
-                <p class="activtext">Parc Lonchamps</p>
+                <p class="activtext">Parc Longchamp</p>
             </div>
         </div>
     </div>
