130821 version iphone, tablette, desktop

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">  
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -72,11 +73,11 @@
 </div> 
 
 <!--Les plus populaires-->
-<aside class="HebEtPop">
+<aside class="HebEtPop flexcolumn">
 <div class="BlocPlusPopulaire">
     <div class="TitrePopulaire">
-        <h2 class="h2titrePop">Les plus populaires</h2>
-        <div class=iconechart><i class="fas fa-chart-line fa-2x font-weight:900"></i></div>
+        <h2 class="h2titre">Les plus populaires</h2>
+        <div><i class="fas fa-chart-line fa-lg font-weight:900"></i></div>
     </div>
 
     <div class="BlocPopResponsive">
@@ -135,7 +136,7 @@
 <div class="hebergement" id="ancrehebergement"> 
 <h2 class="h2titre">Hébergements à Marseille</h2>
     
-    <div class="blocheb1">
+    <div class="BlocHeberResponsive">
         <div class="BlocHebergement">
             <img class="imgheber" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo de chambre d'auberge avec le lit superpose">
             <div class="bloctextheb" >
@@ -188,7 +189,7 @@
         </div>
     </div>
 
-    <div class="blocheb2">
+    <div class="BlocHeberResponsive">
         <div class="BlocHebergement">
         <img class="imgheber" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo chambre d'hôtel">
         <div class="bloctextheb" >
@@ -247,7 +248,7 @@
 
 <!--Activités-->
 <section class="BlocActivites" id="ancreactivite">
-<h2 class="txttitreactiv">Activités à Marseille</h2>
+<h2 class="h2titreactiv">Activités à Marseille</h2>
 
 <div class="imgactivite">
     <div class="activitedesktop">
@@ -257,11 +258,11 @@
         </div>
     </div>
     <div class="activitedesktop">
-        <div class="activite">
+        <div class="activite activite2">
                 <img class="imgactiv imgactivite2" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo de Fort au bord de la mer">
                 <p class="activtext">Fort de Pomègues</p>   
         </div>
-        <div class="activite">
+        <div class="activite activite3">
                 <img class="imgactiv imgactivite3" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo des Iles">
                 <p class="activtext">Îles du Frioul</p>  
         </div>
@@ -273,12 +274,12 @@
         </div>
     </div>
     <div class="activitedesktop">
-        <div class="activite">
-                <img class="imgactiv" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo de paysage avec l'élise en arrière">
+        <div class="activite activite56">
+                <img class="imgactiv imgactivite56" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo de paysage avec l'élise en arrière">
                 <p class="activtext">Notre-Dame-de-la-Garde</p>
     </div>
-            <div class="activite">
-                <img class="imgactiv" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo de parc">
+            <div class="activite activite56">
+                <img class="imgactiv imgactivite56" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo de parc">
                 <p class="activtext">Parc Longchamp</p>
             </div>
     </div>
@@ -288,20 +289,20 @@
 <!--Footer-->
 <footer>
     <div class="footer">
-        <div class="footer1">
+        <div class="footer-item">
             <h2 class="h2footer">A propos</h2>
             <a href="#" class="pfooter">Fonctionnement du site</a>
             <a href="#" class="pfooter">Conditions générales de vente</a>
             <a href="#" class="pfooter">Données et confidentialité</a>
         </div>
   
-        <div class="footer2">
+        <div class="footer-item">
             <h2 class="h2footer">Nos hébergements</h2>
             <a href="#" class="pfooter">Charte qualité</a>
             <a href="#" class="pfooter">Soumettre votre hôtel</a>
         </div>
   
-        <div class="footer3">
+        <div class="footer-item">
             <h2 class="h2footer">Assistance</h2>
             <a href="#" class="pfooter">Centre d'aide</a>
             <a href="#" class="pfooter">Nous contacter</a>
