modif padding hosting

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="BlocHosting">
         <img class="ImgHosting" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo chambre d'hôtel">
         <div class="BlocTextHosting" >
-            <h3 class="HostingTxt">Hôtel de la mer</h3>
+            <h3 class="HostingText">Hôtel de la mer</h3>
             <p class="PriceHosting">Nuit à partir de 46<span class="euro">€</span></p>
             <div class="Star">
                 <ul class="UlHosting UlPop FlexRow">
