petit modif padding

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <form class="form FlexRow" method="GET">
         <i id="map" class="fas fa-map-marker-alt fa 1x"></i> 
         <input id="searching" class="IntSearching" type="search" placeholder="Marseille, France"/>
-        <a href="#"><i id="IconSearching" class="fas fa-search fa-1x"></i><span class="TxtSearching">Rechercher</span></a>
+        <a href="#"><i id="search" class="fas fa-search fa-1x"></i><span class="TxtSearching">Rechercher</span></a>
     </form>
 
     <!--Filtres-->
@@ -66,7 +66,7 @@
 
     <!--Information-->
     <div id="info">
-        <i id="InfoIcone" class="fas fa-info fa-xs"></i>
+        <i class="fas fa-info fa-xs"></i>
         <p id=InfoText>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
 </div> 
