petit changement padding 1908

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="BlocPopResponsive">
         <a href="#" class="BlocPop">
         <img class="ImgPop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo de chambre d'hotel"/>
-        <div class="BlocTxt">
+        <div class="BlocText">
             <h3 class="h3Title">Hôtel Le soleil du matin</h3>
             <p class="PricePop">Nuit à partir de 128<span class="euro">€</span></p>
             <div class="Star">
